--- a/index.html
+++ b/index.html
@@ -3,150 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KI-Workshop</title>
+    <title>Netzwerk - Energieprojekte Ausschreiben</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li> <!-- Hier den Link zur Landingpage -->
-                <li><a href="about.html">About</a></li> <!-- Hier den Link zur About-Page -->
-                <li><a href="kurs.html">Kurs</a></li> <!-- Link zum Kurs -->
-                <li><a href="kontakt.html">Kontakt</a></li> <!-- Link zur Kontakt-Seite -->
-            </ul>
-        </nav>
+        <div class="header-container">
+            <div class="logo">
+                <img src="logo.png" alt="Netzwerk Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Für Gewerke</a></li>
+                    <li><a href="#" class="login-button">Login</a></li>
+                    <li><a href="#" class="register-button">Registrieren</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <section class="landing">
-        <div class="text-container">
-            <h1>Decode the Hype: <br>Lerne, was KI wirklich kann</h1>
-            <p>Künstliche Intelligenz verändert die Art, wie wir arbeiten. 
-            Mit unserem KI-Workshop erlernst du praxisnahe Fähigkeiten, 
-            die dir helfen, im Berufsalltag effizienter und smarter zu arbeiten. 
-            </p>
-            <div class="buttons">
-                <a href="#register" class="btn btn-green" onclick="openModal()">Registrierung</a>
-                <a href="#login" class="btn btn-outline" onclick="openLoginModal()">Login</a>
-            </div>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Projekte ausschreiben<br>Gewerke finden<br>Erfolge sichern</h1>
+            <p>eeNetzwerk ist die Plattform für Energieberater. Mit uns finden Sie die richtigen Partner für Ihre Energie-Projekte.</p>
+            <a href="#" class="cta-button">Jetzt Registrieren</a>
+            <ul class="benefits">
+                <li>✓ Handwerksbetriebe bewerben sich für Ihre Projekte als Partner</li>
+                <li>✓ Zugang zu verifizierte Handwerksbetrieben</li>
+                <li>✓ Gestalten Sie die Projekte für Ihre Kunden sorgenfrei!</li>
+            </ul>
         </div>
-        <img src="2Home.jpg" alt="Menschen am Computer" class="landing-image"> <!-- Bild hier eingefügt -->
+        <div class="hero-images">
+            <img src="images/hero1.png" alt="Energie Projekt Planung">
+            <img src="images/hero2.png" alt="Teamwork an Energieprojekten">
+        </div>
     </section>
 
-    <!-- Modal für die Registrierung -->
-    <div id="registerModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <h2>Registrierung</h2>
-            <form onsubmit="registerUser(); return false;">
-                <input type="email" id="modalEmail" placeholder="E-Mail-Adresse" required />
-                <input type="password" id="modalPassword" placeholder="Passwort" required />
-                <button type="submit" class="btn btn-green">Registrieren</button>
-            </form>
+    <section class="services">
+        <div class="service-item">
+            <h3>Photovoltaik</h3>
+            <p>Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p>
+            <a href="#">Mehr zu Photovoltaik &rarr;</a>
         </div>
-    </div>
+        <div class="service-item">
+            <h3>Heizung</h3>
+            <p>Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
+            <a href="#">Mehr zu Heizung &rarr;</a>
+        </div>
+        <div class="service-item">
+            <h3>Dämmung</h3>
+            <p>Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
+            <a href="#">Mehr zu Dämmung &rarr;</a>
+        </div>
+        <div class="service-item">
+            <h3>Fenster</h3>
+            <p>Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
+            <a href="#">Mehr zu Fenster &rarr;</a>
+        </div>
+    </section>
 
-    <!-- Modal für den Login -->
-    <div id="loginModal" class="modal">
-        <div class="modal-content">
-            <span class="close close-login" onclick="closeLoginModal()">&times;</span>
-            <h2>Login</h2>
-            <form onsubmit="loginUser(); return false;">
-                <input type="email" id="loginEmail" placeholder="E-Mail-Adresse" required />
-                <input type="password" id="loginPassword" placeholder="Passwort" required />
-                <button type="submit" class="btn btn-green">Einloggen</button>
-            </form>
-        </div>
-    </div>
     <footer>
-        <p>&copy; 2024 Ida Patzelt</p>
+        <div class="footer-content">
+            <p>&copy; 2024 Netzwerk. Alle Rechte vorbehalten.</p>
+        </div>
     </footer>
-    
-    <script src="scripts.js"></script>
-    <!-- Firebase SDK und Initialisierung -->
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
-
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyBvck5m_S1pUWykSNfCesJ0Eu6wYE1XgjM",
-            authDomain: "ki-workshop-f800c.firebaseapp.com",
-            projectId: "ki-workshop-f800c",
-            storageBucket: "ki-workshop-f800c.appspot.com",
-            messagingSenderId: "635249479399",
-            appId: "1:635249479399:web:cc707c3dd455fcd140dc42",
-            measurementId: "G-PYJT9ZWQ41"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-        const auth = getAuth(app);
-
-        // Funktion für die Registrierung
-        function registerUser() {
-            const email = document.getElementById('modalEmail').value;
-            const password = document.getElementById('modalPassword').value;
-
-            createUserWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    alert('User registered successfully: ' + user.email);
-                    closeModal();
-                })
-                .catch((error) => {
-                    const errorMessage = error.message;
-                    alert('Error: ' + errorMessage);
-                });
-        }
-
-        // Funktion für den Login
-        function loginUser() {
-            const email = document.getElementById('loginEmail').value;
-            const password = document.getElementById('loginPassword').value;
-
-            signInWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    alert('Erfolgreich angemeldet: ' + user.email);
-                    window.location.href = 'dashboard.html'; // Weiterleitung zur Startseite mit Dashboard
-                })
-                .catch((error) => {
-                    const errorMessage = error.message;
-                    alert('Fehler: ' + errorMessage);
-                });
-        }
-
-        // Funktionen zum Öffnen und Schließen des Modals
-        function openModal() {
-            document.getElementById('registerModal').style.display = 'flex';
-        }
-
-        function closeModal() {
-            document.getElementById('registerModal').style.display = 'none';
-        }
-
-        function openLoginModal() {
-            document.getElementById('loginModal').style.display = 'flex';
-        }
-
-        function closeLoginModal() {
-            document.getElementById('loginModal').style.display = 'none';
-        }
-
-        // Schließen des Modals, wenn außerhalb geklickt wird
-        window.onclick = function(event) {
-            const registerModal = document.getElementById('registerModal');
-            const loginModal = document.getElementById('loginModal');
-            if (event.target === registerModal) {
-                closeModal();
-            } else if (event.target === loginModal) {
-                closeLoginModal();
-            }
-        }
-    </script>
 </body>
 </html>
