--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="logo.png" alt="Netzwerk Logo">
+               <img src="logo_without_text-.svg" alt="Netzwerk Logo">
             </div>
             <nav>
                 <ul>
@@ -37,8 +37,8 @@
             </ul>
         </div>
         <div class="hero-images">
-            <img src="images/hero1.png" alt="Energie Projekt Planung">
-            <img src="images/hero2.png" alt="Teamwork an Energieprojekten">
+            <img src="hero1.png" alt="Energie Projekt Planung">
+            
         </div>
     </section>
 
