--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <p>eeNetzwerk ist die Plattform für Energieberater. Mit uns finden Sie die richtigen Partner für Ihre Energie-Projekte.</p>
             <a href="#" class="cta-button">Jetzt Registrieren</a>
             <ul class="benefits">
-                <li>✓ Handwerksbetriebe bewerben sich für Ihre Projekte als Partner</li>
-                <li>✓ Zugang zu verifizierte Handwerksbetrieben</li>
-                <li>✓ Gestalten Sie die Projekte für Ihre Kunden sorgenfrei!</li>
+                <li> Handwerksbetriebe bewerben sich für Ihre Projekte als Partner</li>
+                <li> Zugang zu verifizierte Handwerksbetrieben</li>
+                <li> Gestalten Sie die Projekte für Ihre Kunden sorgenfrei!</li>
             </ul>
         </div>
         <div class="hero-images">
