--- a/index.html
+++ b/index.html
@@ -38,27 +38,30 @@
         </div>
         <div class="hero-images">
             <img src="hero1.png" alt="Energie Projekt Planung">
-            
         </div>
     </section>
 
     <section class="services">
         <div class="service-item">
+            <img src="Heizung.png" alt="Photovoltaik Icon">
             <h3>Photovoltaik</h3>
             <p>Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p>
             <a href="#">Mehr zu Photovoltaik &rarr;</a>
         </div>
         <div class="service-item">
+            <img src="Heizung.png" alt="Heizung Icon">
             <h3>Heizung</h3>
             <p>Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
             <a href="#">Mehr zu Heizung &rarr;</a>
         </div>
         <div class="service-item">
+            <img src="Heizung.png" alt="Dämmung Icon">
             <h3>Dämmung</h3>
             <p>Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
             <a href="#">Mehr zu Dämmung &rarr;</a>
         </div>
         <div class="service-item">
+            <img src="Heizung.png" alt="Fenster Icon">
             <h3>Fenster</h3>
             <p>Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
             <a href="#">Mehr zu Fenster &rarr;</a>
