--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-               <img src="logo_without_text-.svg" alt="Netzwerk Logo">
+               <img src="logo_with_text-.png" alt="Netzwerk Logo">
             </div>
             <nav>
                 <ul>
