--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="header-container">
+        <div class="header-container" style="padding: 20px 50px;">
             <div class="logo">
                <img src="logo_with_text-.png" alt="Netzwerk Logo">
             </div>
@@ -25,11 +25,11 @@
         </div>
     </header>
 
-    <section class="hero">
+    <section class="hero" style="padding: 60px 80px; margin-bottom: 40px;">
         <div class="hero-content">
-            <h1>Projekte ausschreiben<br>Gewerke finden<br>Erfolge sichern</h1>
-            <p>eeNetzwerk ist die Plattform für Energieberater. Mit uns finden Sie die richtigen Partner für Ihre Energie-Projekte.</p>
-            <a href="#" class="cta-button">Jetzt Registrieren</a>
+            <h1 style="margin-bottom: 20px;">Projekte ausschreiben<br>Gewerke finden<br>Erfolge sichern</h1>
+            <p style="margin-bottom: 20px;">eeNetzwerk ist die Plattform für Energieberater. Mit uns finden Sie die richtigen Partner für Ihre Energie-Projekte.</p>
+            <a href="#" class="cta-button" style="margin-bottom: 30px;">Jetzt Registrieren</a>
             <ul class="benefits">
                 <li> Handwerksbetriebe bewerben sich für Ihre Projekte als Partner</li>
                 <li> Zugang zu verifizierte Handwerksbetrieben</li>
@@ -41,26 +41,26 @@
         </div>
     </section>
 
-    <section class="services">
-        <div class="service-item">
+    <section class="services" style="gap: 30px; padding: 0 80px;">
+        <div class="service-item" style="padding: 25px;">
             <img src="Heizung.png" alt="Photovoltaik Icon">
             <h3>Photovoltaik</h3>
             <p>Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p>
             <a href="#">Mehr zu Photovoltaik &rarr;</a>
         </div>
-        <div class="service-item">
+        <div class="service-item" style="padding: 25px;">
             <img src="Heizung.png" alt="Heizung Icon">
             <h3>Heizung</h3>
             <p>Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
             <a href="#">Mehr zu Heizung &rarr;</a>
         </div>
-        <div class="service-item">
+        <div class="service-item" style="padding: 25px;">
             <img src="Heizung.png" alt="Dämmung Icon">
             <h3>Dämmung</h3>
             <p>Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
             <a href="#">Mehr zu Dämmung &rarr;</a>
         </div>
-        <div class="service-item">
+        <div class="service-item" style="padding: 25px;">
             <img src="Heizung.png" alt="Fenster Icon">
             <h3>Fenster</h3>
             <p>Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
@@ -69,7 +69,7 @@
     </section>
 
     <footer>
-        <div class="footer-content">
+        <div class="footer-content" style="padding: 40px 20px;">
             <p>&copy; 2024 Netzwerk. Alle Rechte vorbehalten.</p>
         </div>
     </footer>
