--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Für Gewerke</a></li>
+                    <li><a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Für Gewerke</a></li>
                     <li><a href="#" class="login-button">Login</a></li>
                     <li><a href="#" class="register-button">Registrieren</a></li>
                 </ul>
@@ -41,17 +41,17 @@
         </div>
     </section>
 
-    <section class="services" style="gap: 30px; padding: 0 80px;">
-        <div class="service-item" style="padding: 25px;">
-            <img src="Heizung.png" alt="Photovoltaik Icon">
-            <h3>Photovoltaik</h3>
-            <p>Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p>
-            <a href="#">Mehr zu Photovoltaik &rarr;</a>
+    <section class="services" style="display: flex; justify-content: space-around; gap: 20px; padding: 0 50px; flex-wrap: wrap;">
+        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
+            <img src="Heizung.png" alt="Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
+            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Photovoltaik</h3>
+            <p style="margin-bottom: 15px; color: #555;">Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p>
+            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Photovoltaik   &rarr;</a>
         </div>
-        <div class="service-item" style="padding: 25px;">
-            <img src="Heizung.png" alt="Heizung Icon">
-            <h3>Heizung</h3>
-            <p>Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
+        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
+            <img src="Heizung.png" alt="Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
+            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Heizung</h3>
+            <p style="margin-bottom: 15px; color: #555;">Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
             <a href="#">Mehr zu Heizung &rarr;</a>
         </div>
         <div class="service-item" style="padding: 25px;">
