--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </section>
 
-    <section class="services" style="display: flex; justify-content: space-around; gap: 20px; padding: 0 50px; flex-wrap: wrap;">
+    <section class="services" style="display: flex; justify-content: center; gap: 20px; padding: 20px 50px; flex-wrap: wrap;">
         <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
             <img src="Heizung.png" alt="Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
             <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Photovoltaik</h3>
@@ -52,20 +52,20 @@
             <img src="Heizung.png" alt="Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
             <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Heizung</h3>
             <p style="margin-bottom: 15px; color: #555;">Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
-            <a href="#">Mehr zu Heizung &rarr;</a>
+            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Heizung &rarr;</a>
         </div>
-        <div class="service-item" style="padding: 25px;">
-            <img src="Heizung.png" alt="Dämmung Icon">
-            <h3>Dämmung</h3>
-            <p>Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
-            <a href="#">Mehr zu Dämmung &rarr;</a>
-        </div>
-        <div class="service-item" style="padding: 25px;">
-            <img src="Heizung.png" alt="Fenster Icon">
-            <h3>Fenster</h3>
-            <p>Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
-            <a href="#">Mehr zu Fenster &rarr;</a>
-        </div>
+        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
+    <img src="Heizung.png" alt="Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
+    <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Dämmung</h3>
+    <p style="margin-bottom: 15px; color: #555;">Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
+    <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Dämmung &rarr;</a>
+</div>
+        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
+    <img src="Heizung.png" alt="Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
+    <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Fenster</h3>
+    <p style="margin-bottom: 15px; color: #555;">Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
+    <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Fenster &rarr;</a>
+</div>
     </section>
 
     <footer>
