--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container" style="padding: 20px 50px;">
             <div class="logo">
-               <img src="logo_with_text-.png" alt="Netzwerk Logo">
+               <img src="logo_with_text-.png" alt="Netzwerk Logo" style="max-width: 200px; height: auto;">
             </div>
             <nav>
                 <ul>
@@ -36,19 +36,17 @@
                 <li> Gestalten Sie die Projekte für Ihre Kunden sorgenfrei!</li>
             </ul>
         </div>
-        <div class="hero-images">
-            <img src="hero1.png" alt="Energie Projekt Planung">
-        </div>
+        <div class="hero-images" style="max-width: 50%;"><img src="hero1.png" alt="Energie Projekt Planung" style="width: 100%; height: auto;"></div>
     </section>
 
-    <section class="services" style="display: flex; justify-content: space-evenly; gap: 20px; padding: 20px 50px; flex-wrap: wrap;">
-        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
+    <section class="services" style="display: flex; justify-content: space-evenly; gap: 40px; padding: 40px 50px; flex-wrap: wrap;">
+        <div class="service-item" style="padding: 30px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 320px;">
             <img src="Photovoltaik.png" alt="Photovoltaik Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
             <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Photovoltaik</h3>
             <p style="margin-bottom: 15px; color: #555;">Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p>
             <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Photovoltaik   &rarr;</a>
         </div>
-        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
+        <div class="service-item" style="padding: 30px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 320px;">
     <img src="Heizung.png" alt="Heizung Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
     <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Heizung</h3>
             <p style="margin-bottom: 15px; color: #555;">Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
