--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                <img src="logo_with_text-.png" alt="Netzwerk Logo" style="max-width: 200px; height: auto;">
             </div>
             <nav>
-                <ul>
+                <ul style="list-style-type: none; display: flex; gap: 20px; align-items: center; margin: 0; padding: 0;">
                     <li><a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Für Gewerke</a></li>
                     <li><a href="#" class="login-button">Login</a></li>
                     <li><a href="#" class="register-button">Registrieren</a></li>
