--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
                <img src="logo_with_text-.png" alt="Netzwerk Logo" style="max-width: 200px; height: auto;">
             </div>
             <nav>
-                <ul list-style-type: none; /* Entfernt die Aufzählungszeichen */
-    padding: 0; /* Entfernt die Standard-Einrückung */
-    margin: 0; /* Entfernt den Standard-Abstand */
-    display: flex; /* Ordnet die Elemente nebeneinander an */
-    gap: 20px; /* Fügt Abstand zwischen den Listenelementen hinzu */
-    align-items: center; /* Zentriert die Elemente vertikal */
-                    <li><a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Für Gewerke</a></li>
-                    <li><a href="#" class="login-button">Login</a></li>
-                    <li><a href="#" class="register-button">Registrieren</a></li>
-                </ul>
-            </nav>
+              <nav>
+    <ul>
+        <li><a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Für Gewerke</a></li>
+        <li><a href="#" class="login-button">Login</a></li>
+        <li><a href="#" class="register-button">Registrieren</a></li>
+    </ul>
+</nav>
+
         </div>
     </header>
 
