--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1 style="margin-bottom: 20px;">Projekte ausschreiben<br>Gewerke finden<br>Erfolge sichern</h1>
             <p style="margin-bottom: 20px;">eeNetzwerk ist die Plattform für Energieberater. Mit uns finden Sie die richtigen Partner für Ihre Energie-Projekte.</p>
             <a href="#" class="cta-button" style="margin-bottom: 30px;">Jetzt Registrieren</a>
-            <ul class="benefits">
+            <ul class="styled-list">
                 <li> Handwerksbetriebe bewerben sich für Ihre Projekte als Partner</li>
                 <li> Zugang zu verifizierte Handwerksbetrieben</li>
                 <li> Gestalten Sie die Projekte für Ihre Kunden sorgenfrei!</li>
