--- a/index.html
+++ b/index.html
@@ -1,76 +1,74 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netzwerk - Energieprojekte Ausschreiben</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8"> <!-- Zeichensatz auf UTF-8 setzen -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsives Design ermöglichen -->
+    <title>Netzwerk - Energieprojekte Ausschreiben</title> <!-- Seitentitel -->
+    <link rel="stylesheet" href="styles.css"> <!-- Externe CSS-Datei verlinken -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Vorverbindung zur Google Fonts-Domain herstellen -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Vorverbindung zur Google Fonts-Server herstellen -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Google Fonts einbinden -->
 </head>
 <body>
     <header>
-        <div class="header-container" style="padding: 20px 50px;">
+        <div class="header-container" style="padding: 20px 50px;"> <!-- Container für das Header-Inhalt mit Padding -->
             <div class="logo">
-               <img src="logo_with_text-.png" alt="Netzwerk Logo" style="max-width: 200px; height: auto;">
+               <img src="logo_with_text-.png" alt="Netzwerk Logo" style="max-width: 200px; height: auto;"> <!-- Logo-Bild mit maximaler Breite und automatischer Höhe -->
             </div>
             <nav>
-              <nav>
-    <ul>
-        <li><a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Für Gewerke</a></li>
-        <li><a href="#" class="login-button">Login</a></li>
-        <li><a href="#" class="register-button">Registrieren</a></li>
-    </ul>
-</nav>
-
+                <ul> <!-- Navigationsliste ohne Aufzählungszeichen -->
+                    <li><a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Für Gewerke</a></li> <!-- Link für Gewerke -->
+                    <li><a href="#" class="login-button">Login</a></li> <!-- Link für Login mit spezieller Button-Klasse -->
+                    <li><a href="#" class="register-button">Registrieren</a></li> <!-- Link für Registrierung mit spezieller Button-Klasse -->
+                </ul>
+            </nav>
         </div>
     </header>
 
-    <section class="hero" style="padding: 60px 80px; margin-bottom: 40px;">
+    <section class="hero" style="padding: 60px 80px; margin-bottom: 40px;"> <!-- Hero-Sektion mit Padding und unterem Abstand -->
         <div class="hero-content">
-            <h1 style="margin-bottom: 20px;">Projekte ausschreiben<br>Gewerke finden<br>Erfolge sichern</h1>
-            <p style="margin-bottom: 20px;">eeNetzwerk ist die Plattform für Energieberater. Mit uns finden Sie die richtigen Partner für Ihre Energie-Projekte.</p>
-            <a href="#" class="cta-button" style="margin-bottom: 30px;">Jetzt Registrieren</a>
-            <ul class="styled-list">
+            <h1 style="margin-bottom: 20px;">Projekte ausschreiben<br>Gewerke finden<br>Erfolge sichern</h1> <!-- Hauptüberschrift -->
+            <p style="margin-bottom: 20px;">eeNetzwerk ist die Plattform für Energieberater. Mit uns finden Sie die richtigen Partner für Ihre Energie-Projekte.</p> <!-- Beschreibungstext -->
+            <a href="#" class="cta-button" style="margin-bottom: 30px;">Jetzt Registrieren</a> <!-- Call-to-Action-Button für Registrierung -->
+            <ul class="styled-list"> <!-- Liste mit speziellen Aufzählungszeichen (verwendet die Klasse 'styled-list') -->
                 <li> Handwerksbetriebe bewerben sich für Ihre Projekte als Partner</li>
                 <li> Zugang zu verifizierte Handwerksbetrieben</li>
                 <li> Gestalten Sie die Projekte für Ihre Kunden sorgenfrei!</li>
             </ul>
         </div>
-        <div class="hero-images" style="max-width: 35%;"><img src="hero1.png" alt="Energie Projekt Planung" style="width: 100%; height: auto;"></div>
+        <div class="hero-images" style="max-width: 35%;"><img src="hero1.png" alt="Energie Projekt Planung" style="width: 100%; height: auto;"></div> <!-- Bild innerhalb der Hero-Sektion mit maximaler Breite von 35% -->
     </section>
 
-    <section class="services" style="display: flex; justify-content: center; gap: 40px; padding: 40px 50px; flex-wrap: wrap;">
-        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
-            <img src="Photovoltaik.png" alt="Photovoltaik Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
-            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Photovoltaik</h3>
-            <p style="margin-bottom: 15px; color: #555;">Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p>
-            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Photovoltaik   &rarr;</a>
+    <section class="services" style="display: flex; justify-content: center; gap: 40px; padding: 40px 50px; flex-wrap: wrap;"> <!-- Service-Sektion mit Flexbox-Anordnung und automatischem Zeilenumbruch -->
+        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;"> <!-- Einzelner Service-Kasten mit Schatten, Hintergrundfarbe und abgerundeten Ecken -->
+            <img src="Photovoltaik.png" alt="Photovoltaik Icon" style="margin-bottom: 15px; width: 50px; height: auto;"> <!-- Bild für Photovoltaik-Service -->
+            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Photovoltaik</h3> <!-- Überschrift für Photovoltaik-Service -->
+            <p style="margin-bottom: 15px; color: #555;">Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p> <!-- Beschreibungstext für Photovoltaik-Service -->
+            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Photovoltaik &rarr;</a> <!-- Link für weitere Informationen -->
         </div>
         <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
-    <img src="Heizung.png" alt="Heizung Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
-    <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Heizung</h3>
-            <p style="margin-bottom: 15px; color: #555;">Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
-            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Heizung &rarr;</a>
+            <img src="Heizung.png" alt="Heizung Icon" style="margin-bottom: 15px; width: 50px; height: auto;"> <!-- Bild für Heizung-Service -->
+            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Heizung</h3> <!-- Überschrift für Heizung-Service -->
+            <p style="margin-bottom: 15px; color: #555;">Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p> <!-- Beschreibungstext für Heizung-Service -->
+            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Heizung &rarr;</a> <!-- Link für weitere Informationen -->
         </div>
         <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
-    <img src="Daemmung.png" alt="Dämmung Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
-    <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Dämmung</h3>
-    <p style="margin-bottom: 15px; color: #555;">Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
-    <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Dämmung &rarr;</a>
-</div>
+            <img src="Daemmung.png" alt="Dämmung Icon" style="margin-bottom: 15px; width: 50px; height: auto;"> <!-- Bild für Dämmung-Service -->
+            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Dämmung</h3> <!-- Überschrift für Dämmung-Service -->
+            <p style="margin-bottom: 15px; color: #555;">Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p> <!-- Beschreibungstext für Dämmung-Service -->
+            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Dämmung &rarr;</a> <!-- Link für weitere Informationen -->
+        </div>
         <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
-    <img src="Fenster.png" alt="Fenster Icon" style="margin-bottom: 15px; width: 50px; height: auto;">
-    <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Fenster</h3>
-    <p style="margin-bottom: 15px; color: #555;">Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
-    <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Fenster &rarr;</a>
-</div>
+            <img src="Fenster.png" alt="Fenster Icon" style="margin-bottom: 15px; width: 50px; height: auto;"> <!-- Bild für Fenster-Service -->
+            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Fenster</h3> <!-- Überschrift für Fenster-Service -->
+            <p style="margin-bottom: 15px; color: #555;">Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p> <!-- Beschreibungstext für Fenster-Service -->
+            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Fenster &rarr;</a> <!-- Link für weitere Informationen -->
+        </div>
     </section>
 
     <footer>
-        <div class="footer-content" style="padding: 40px 20px;">
-            <p>&copy; 2024 Netzwerk. Alle Rechte vorbehalten.</p>
+        <div class="footer-content" style="padding: 40px 20px;"> <!-- Footer-Bereich mit Padding -->
+            <p>&copy; 2024 Netzwerk. Alle Rechte vorbehalten.</p> <!-- Copyright-Hinweis -->
         </div>
     </footer>
 </body>
