--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <h1 style="margin-bottom: 20px;">Projekte ausschreiben<br>Gewerke finden<br>Erfolge sichern</h1> <!-- Hauptüberschrift -->
             <p style="margin-bottom: 20px;">eeNetzwerk ist die Plattform für Energieberater. Mit uns finden Sie die richtigen Partner für Ihre Energie-Projekte.</p> <!-- Beschreibungstext -->
             <a href="#" class="cta-button" style="margin-bottom: 30px;">Jetzt Registrieren</a> <!-- Call-to-Action-Button für Registrierung -->
-            <ul class="styled-list"> <!-- Liste mit speziellen Aufzählungszeichen (verwendet die Klasse 'styled-list') -->
-                <li> Handwerksbetriebe bewerben sich für Ihre Projekte als Partner</li>
-                <li> Zugang zu verifizierte Handwerksbetrieben</li>
-                <li> Gestalten Sie die Projekte für Ihre Kunden sorgenfrei!</li>
+            <ul class="styled-list">
+                <li>Handwerksbetriebe bewerben sich für Ihre Projekte als Partner</li>
+                <li>Zugang zu verifizierten Handwerksbetrieben</li>
+                <li>Gestalten Sie die Projekte für Ihre Kunden sorgenfrei!</li>
             </ul>
         </div>
         <div class="hero-images" style="max-width: 35%;"><img src="hero1.png" alt="Energie Projekt Planung" style="width: 100%; height: auto;"></div> <!-- Bild innerhalb der Hero-Sektion mit maximaler Breite von 35% -->
