--- a/index.html
+++ b/index.html
@@ -39,31 +39,46 @@
         <div class="hero-images" style="max-width: 35%;"><img src="hero1.png" alt="Energie Projekt Planung" style="width: 100%; height: auto;"></div> <!-- Bild innerhalb der Hero-Sektion mit maximaler Breite von 35% -->
     </section>
 
-    <section class="services" style="display: flex; justify-content: center; gap: 40px; padding: 40px 50px; flex-wrap: wrap;"> <!-- Service-Sektion mit Flexbox-Anordnung und automatischem Zeilenumbruch -->
-        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;"> <!-- Einzelner Service-Kasten mit Schatten, Hintergrundfarbe und abgerundeten Ecken -->
-            <img src="Photovoltaik.png" alt="Photovoltaik Icon" style="margin-bottom: 15px; width: 50px; height: auto;"> <!-- Bild für Photovoltaik-Service -->
-            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Photovoltaik</h3> <!-- Überschrift für Photovoltaik-Service -->
-            <p style="margin-bottom: 15px; color: #555;">Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p> <!-- Beschreibungstext für Photovoltaik-Service -->
-            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Photovoltaik &rarr;</a> <!-- Link für weitere Informationen -->
+    <section class="services" style="display: flex; justify-content: center; gap: 40px; padding: 40px 50px; flex-wrap: wrap;">
+    <!-- Service-Sektion mit Flexbox-Anordnung und automatischem Zeilenumbruch -->
+    <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
+        <!-- Einzelner Service-Kasten mit Schatten, Hintergrundfarbe und abgerundeten Ecken -->
+        <div class="service-item-header">
+            <h3 style="margin: 0; color: #222; font-weight: 700;">Photovoltaik</h3>
+            <img src="Photovoltaik.png" alt="Photovoltaik Icon" style="width: 50px; height: auto; margin-left: auto;">
         </div>
-        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
-            <img src="Heizung.png" alt="Heizung Icon" style="margin-bottom: 15px; width: 50px; height: auto;"> <!-- Bild für Heizung-Service -->
-            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Heizung</h3> <!-- Überschrift für Heizung-Service -->
-            <p style="margin-bottom: 15px; color: #555;">Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p> <!-- Beschreibungstext für Heizung-Service -->
-            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Heizung &rarr;</a> <!-- Link für weitere Informationen -->
+        <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p>
+        <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Photovoltaik &rarr;</a>
+    </div>
+
+    <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
+        <div class="service-item-header">
+            <h3 style="margin: 0; color: #222; font-weight: 700;">Heizung</h3>
+            <img src="Heizung.png" alt="Heizung Icon" style="width: 50px; height: auto; margin-left: auto;">
         </div>
-        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
-            <img src="Daemmung.png" alt="Dämmung Icon" style="margin-bottom: 15px; width: 50px; height: auto;"> <!-- Bild für Dämmung-Service -->
-            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Dämmung</h3> <!-- Überschrift für Dämmung-Service -->
-            <p style="margin-bottom: 15px; color: #555;">Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p> <!-- Beschreibungstext für Dämmung-Service -->
-            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Dämmung &rarr;</a> <!-- Link für weitere Informationen -->
+        <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
+        <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Heizung &rarr;</a>
+    </div>
+
+    <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
+        <div class="service-item-header">
+            <h3 style="margin: 0; color: #222; font-weight: 700;">Dämmung</h3>
+            <img src="Daemmung.png" alt="Dämmung Icon" style="width: 50px; height: auto; margin-left: auto;">
         </div>
-        <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: center; width: 100%; max-width: 300px;">
-            <img src="Fenster.png" alt="Fenster Icon" style="margin-bottom: 15px; width: 50px; height: auto;"> <!-- Bild für Fenster-Service -->
-            <h3 style="margin-bottom: 10px; color: #222; font-weight: 700;">Fenster</h3> <!-- Überschrift für Fenster-Service -->
-            <p style="margin-bottom: 15px; color: #555;">Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p> <!-- Beschreibungstext für Fenster-Service -->
-            <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Fenster &rarr;</a> <!-- Link für weitere Informationen -->
+        <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
+        <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Dämmung &rarr;</a>
+    </div>
+
+    <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
+        <div class="service-item-header">
+            <h3 style="margin: 0; color: #222; font-weight: 700;">Fenster</h3>
+            <img src="Fenster.png" alt="Fenster Icon" style="width: 50px; height: auto; margin-left: auto;">
         </div>
+        <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
+        <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Fenster &rarr;</a>
+    </div>
+</section>
+
     </section>
 
     <footer>
