--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Einzelner Service-Kasten mit Schatten, Hintergrundfarbe und abgerundeten Ecken -->
         <div class="service-item-header">
             <h3 style="margin: 0; color: #222; font-weight: 700;">Photovoltaik</h3>
-            <img src="Photovoltaik.png" alt="Photovoltaik Icon" style="width: 50px; height: auto; margin-left: auto;">
+            <img src="Photovoltaik.png" alt="Photovoltaik Icon" style="width: 120px; height: auto; margin-left: auto;">
         </div>
         <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p>
         <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Photovoltaik &rarr;</a>
@@ -54,7 +54,7 @@
     <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
         <div class="service-item-header">
             <h3 style="margin: 0; color: #222; font-weight: 700;">Heizung</h3>
-            <img src="Heizung.png" alt="Heizung Icon" style="width: 50px; height: auto; margin-left: auto;">
+            <img src="Heizung.png" alt="Heizung Icon" style="width: 120px; height: auto; margin-left: auto;">
         </div>
         <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
         <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Heizung &rarr;</a>
@@ -63,7 +63,7 @@
     <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
         <div class="service-item-header">
             <h3 style="margin: 0; color: #222; font-weight: 700;">Dämmung</h3>
-            <img src="Daemmung.png" alt="Dämmung Icon" style="width: 50px; height: auto; margin-left: auto;">
+            <img src="Heizung.png" alt="Dämmung Icon" style="width: 120px; height: auto; margin-left: auto;">
         </div>
         <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
         <a href="#" style="color: #333; font-weight: 700; text-decoration: none; transition: color 0.3s ease;">Mehr zu Dämmung &rarr;</a>
