--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
         <div class="service-item-header">
             <h3 style="margin: 0; color: #222; font-weight: 700;">Fenster</h3>
-            <img src="Fenster.png" alt="Fenster Icon" style="width: 50px; height: auto; margin-left: auto;">
+            <img src="Heizung.png" alt="Dämmung Icon" style="width: 120px; height: auto; margin-left: auto;">
         </div>
         <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
         <a href="#" class="service-link"> Mehr zu Fenster &rarr;</a>
