--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="Photovoltaik.png" alt="Photovoltaik Icon" style="width: 120px; height: auto; margin-left: auto;">
         </div>
         <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Erstellen Sie Photovoltaik-Projekte und finden Sie die passenden Handwerksbetriebe.</p>
-        <a href="#" class="service-link">Mehr zu Photovoltaik &rarr;</a>
+        <a href="#" class="service-link">Mehr zu Photovoltaik;</a>
     </div>
 
     <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
@@ -57,7 +57,7 @@
             <img src="Heizung.png" alt="Heizung Icon" style="width: 120px; height: auto; margin-left: auto;">
         </div>
         <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Von Wärmepumpe über Infrarotheizung bis hin zu Gasheizung.</p>
-        <a href="#" class="service-link">Mehr zu Heizung &rarr;</a>
+        <a href="#" class="service-link">Mehr zu Heizung;</a>
     </div>
 
     <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
@@ -66,7 +66,7 @@
             <img src="Heizung.png" alt="Dämmung Icon" style="width: 120px; height: auto; margin-left: auto;">
         </div>
         <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Ohne Dämmung geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
-        <a href="#" class="service-link">Mehr zu Dämmung &rarr;</a>
+        <a href="#" class="service-link">Mehr zu Dämmung;</a>
     </div>
 
     <div class="service-item" style="padding: 20px; background-color: #e6f9f4; border-radius: 15px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); text-align: left; width: 100%; max-width: 300px;">
@@ -75,7 +75,7 @@
             <img src="Heizung.png" alt="Dämmung Icon" style="width: 120px; height: auto; margin-left: auto;">
         </div>
         <p style="margin-top: 15px; margin-bottom: 15px; color: #555;">Ohne Fenster geht es nicht. Finden Sie die passenden Handwerksbetriebe.</p>
-        <a href="#" class="service-link"> Mehr zu Fenster &rarr;</a>
+        <a href="#" class="service-link"> Mehr zu Fenster;</a>
     </div>
 </section>
 
