--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
         <a href="#" class="service-link"> Mehr zu Fenster</a>
     </div>
 </section>
+<section class="dashboard-description">
+    <h2>Dashboard-Übersicht</h2>
+    <p>
+        Das Dashboard bietet Ihnen eine zentrale Übersicht über Ihre Energieprojekte und zeigt den Fortschritt im Projekt Funnel von der Erstellung über die Ausschreibung bis hin zum Abschluss an. Es gibt Ihnen einen schnellen Überblick über die Anzahl der Anfragen, die erwarteten Provisionen, sowie die aktuellen und jährlichen Auszahlungen. 
+    </p>
+    <p>
+        Neben den Projektdetails wie Titel, Erstellungsdatum und Status, finden Sie ebenfalls eine Liste aktueller Anfragen und die Informationen zu Ihrem Beratungsteam. So können Sie alle wichtigen Kennzahlen und anstehenden Aufgaben an einem Ort einsehen und effizient verwalten.
+    </p>
+    
+</section>
 
     </section>
 
