--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <p>
         Neben den Projektdetails wie Titel, Erstellungsdatum und Status, finden Sie ebenfalls eine Liste aktueller Anfragen und die Informationen zu Ihrem Beratungsteam. So können Sie alle wichtigen Kennzahlen und anstehenden Aufgaben an einem Ort einsehen und effizient verwalten.
     </p>
-     <img src="images/Dashboard.png" alt="Dashboard Übersicht" style="max-width: 100%; height: auto; margin-top: 20px;">
+     <img src="Dashboard.png" alt="Dashboard Übersicht" style="max-width: 100%; height: auto; margin-top: 20px;">
 </section>
 
     </section>
