--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
         Neben den Projektdetails wie Titel, Erstellungsdatum und Status, finden Sie ebenfalls eine Liste aktueller Anfragen und die Informationen zu Ihrem Beratungsteam. So können Sie alle wichtigen Kennzahlen und anstehenden Aufgaben an einem Ort einsehen und effizient verwalten.
     </p>
      <img src="Dashboard.png" alt="Dashboard Übersicht" style="max-width: 100%; height: auto; margin-top: 20px;">
+    <div class="info-boxes">
+        <div class="info-box hidden">Projekte übersichtlich verwalten</div>
+        <div class="info-box hidden">Auszahlungen im Blick behalten</div>
+        <div class="info-box hidden">Anfragen schnell bearbeiten</div>
+    </div>
 </section>
 
 <section class="intro" style="padding: 50px 50px;">
