--- a/index.html
+++ b/index.html
@@ -78,6 +78,31 @@
         <a href="#" class="service-link"> Mehr zu Fenster</a>
     </div>
 </section>
+<section class="for-energy-advisors">
+    <h2>Projekte vermitteln & Ihre Arbeit optimieren</h2>
+    <p>
+        Eenetzwerk.de hilft Ihnen als Energieberater, Ihre Arbeit effizienter zu gestalten. Vermitteln Sie Projekte an vertrauenswürdige Handwerksbetriebe, verbessern Sie Ihre Dienstleistungen und bauen Sie Vertrauen bei Ihren Kunden auf.
+    </p>
+
+    <div class="advisor-benefits">
+        <div class="benefit">
+            <h3>Projekte vermitteln</h3>
+            <p>Finden Sie passende Handwerker und Installateure für Ihre Kundenprojekte – ohne Umwege.</p>
+        </div>
+        <div class="benefit">
+            <h3>Effiziente Arbeitsabläufe</h3>
+            <p>Dank detaillierter Datenerfassung und einem transparenten Projektmanagement behalten Sie stets den Überblick.</p>
+        </div>
+        <div class="benefit">
+            <h3>Mehr Vertrauen schaffen</h3>
+            <p>Schützen Sie Ihre Kunden vor unseriösen Anbietern und arbeiten Sie nur mit qualifizierten Partnern zusammen.</p>
+        </div>
+    </div>
+
+    <a href="#" class="cta-button">Jetzt Energieberater-Account erstellen</a>
+</section>
+
+    
 <section class="dashboard-description" style="padding: 50px 50px;">
     <h2>Dashboard-Übersicht</h2>
     <p>
